[tool.poetry]
name = "pytracing"
version = "0.4.1"
description = "A python trace profiler that outputs to chrome trace-viewer format (about://tracing)."
authors = ["kencyke <casek2703@gmail.com>"]
license = "MIT"
url = "https://github.com/kencyke/pytracing"
packages = [
    { include = "pytracing" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
rope = "^0.14.0"
mypy = "^0.720.0"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.vscode
    | _build
    | buck-out
    | build
    | dist
    | dockerfile
    | output
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
